--- a/style.css
+++ b/style.css
@@ -19,4 +19,9 @@
         padding: 10px 20px; 
         font-size: 20px; 
         text-align: center;
+        font-family: 'Caveat', cursive;
+font-family: 'Dancing Script', cursive;
+font-family: 'Dosis', sans-serif;
+font-family: 'Lora', serif;
+font-family: 'Roboto', sans-serif;
       }
