--- a/style.css
+++ b/style.css
@@ -23,20 +23,6 @@ li{
 a{
   text-decoration: none;
 }
-.hamburger{
-  display:none;
-
-}
-.bar{
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px auto;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color: #101010;
-
-}
 
 
 .header{
@@ -74,7 +60,7 @@ a{
 }
 
 
-
+image container css
 
 
 .image-container{
@@ -104,47 +90,25 @@ font-family: 'Dosis', sans-serif;
 font-family: 'Lora', serif;
 font-family: 'Roboto', sans-serif;
       }
-      @media only screen and (max-width: 768px) {
-        .nav-menu {
-            position: fixed;
-            left: -100%;
-            top: 5rem;
-            flex-direction: column;
-            background-color: #fff;
-            width: 100%;
-            border-radius: 10px;
-            text-align: center;
-            transition: 0.3s;
-            box-shadow:
-                0 10px 27px rgba(0, 0, 0, 0.05);
-        }
     
-        .nav-menu.active {
-            left: 0;
-        }
+    Submen-
     
-        .nav-item {
-            margin: 2.5rem 0;
-        }
-    
-        .hamburger {
-            display: block;
-            cursor: pointer;
-        }
-    
-    }
-    
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-    
+li:hover{
+cursor:pointer;
+}
+li
+{
+   display:block;
+   float:left;
+   width:50px; /* adjust */
+   height:100%; /* adjust */
+   padding: 1px; /*adjust*/
+}
+.dropdown{
+  display:none;
+}
+.nav-item:hover>ul {
+	display: block;
+	float:left;
+  overflow: hidden;
+}
